# imageproc

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: imgproc.cpp
include/: canny.h  canny.hpp  float_image.h  float_image.hpp  gaussian.h  gaussian.hpp  hysteresis.hpp  image_gray8.h  nonmax.h  nonmax.hpp  sobel.h  sobel.hpp
src/: canny.cpp  float_image.cpp  gaussian.cpp  hysteresis.cpp  image_gray8.cpp  nonmax.cpp  sobel.cpp
